function workinggit add .git add .

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id='content'>
         <h1>War On Code</h1>
+        <h2 class='difficulty'></h2>
         <label for="code">Code</label><br/>
         <textarea name="code" id="code" cols="" rows=""></textarea>
         <button onclick="evaluateIt()">Submit</button>
