got rid of alerts

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <label for="code">Code</label><br/>
         <textarea name="code" id="code" cols="" rows=""></textarea>
         <button onclick="evaluateIt()">Submit</button>
+        <button class="next-challenge">Next Challenge</button>
         <br/>
 
         <h3>Tests</h3>
