added reset button and function

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <div id='content'>
         <h1>War On Code</h1>
         <h2 class='difficulty'></h2>
-        <label for="code">Code</label><br/>
+        <label for="code">Starter Code</label><br/>
         <textarea name="code" id="code" cols="" rows=""></textarea>
         <button onclick="evaluateIt()">Submit</button>
+        <button class="try-again">Try Again!</button>
         <button class="next-challenge">Next Challenge</button>
+        <button class="reset">Start Over!</button>
         <br/>
 
         <h3>Tests</h3>
-        <p>The following tests will assert that your answer is correct.</p>
+        <p>The tests below will evaluate your code</p>
         <pre id="tests">
 
         </pre>
